Facebbok e Instagram agregados

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Título de la Página">
+    <meta name="twitter:title" content="WareUP – Logística onDemand">
     <meta name="twitter:description" content="Descubre WareUP: tu solución en logística onDemand. Flexibilidad, confiabilidad y simplicidad para optimizar tus operaciones y resultados empresariales.">
     <meta name="twitter:image" content="%PUBLIC_URL%/assets/images/wareup/logo.png">
 
